--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-mongodb</artifactId>
+      <version>1.10.4.RELEASE</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
   <build>
